# pacemanbot

./: CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md
.github/workflows/: 1_15_integration_tests.yml  checks.yml  ci_115.yml  ci_116.yml  ci_17.yml  ci_aa.yml  ci_pr.yml  unit_tests.yml
src/: commands.rs  components.rs  consts.rs  controller.rs  core.rs  guild_types.rs  handler.rs  handler_utils.rs  handlers.rs  main.rs  response_types.rs  tests.rs  types.rs  utils.rs
src/cache/: cache.rs  consts.rs  guild_data.rs  mod.rs  players.rs  role_data.rs  split.rs
src/components/: mod.rs
src/dispatcher/: consts.rs  dispatcher.rs  get_run_info.rs  mod.rs  non_pace_event.rs  pace_event.rs  run_info.rs
src/handler/: application_command_interaction.rs  channel_events.rs  guild_create.rs  guild_delete.rs  guild_role_events.rs  handler.rs  interaction_create.rs  message_component_interaction.rs  message_events.rs  mod.rs  ready.rs  update_cache.rs
src/utils/: consts.rs  create_guild_role.rs  create_select_option.rs  extract_name_and_splits_from_line.rs  extract_name_or_uuid_and_splits_from_line.rs  extract_split_from_pb_role_name.rs  extract_split_from_role_name.rs  extract_splits_and_name_from_role_name.rs  format_time.rs  get_event_type.rs  get_new_config_contents.rs  get_seedwave_info.rs  millis_to_mins_secs.rs  mins_secs_to_millis.rs  mod.rs  remove_roles_starting_with.rs  remove_runner_pings.rs  send_webhook_message.rs  update_leaderboard.rs
src/ws/: consts.rs  mod.rs  response.rs  ws.rs
tests/: test-multi-aa.sh  test-multi.sh  test-one-aa.sh  test-one.sh
(+33 files in other folders)
