[package]
name = "pacemanbot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
regex = "1.9.1"
serenity = "0.11.0"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1.14"
tokio-tungstenite = { version = "0.20.0", features = ["native-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11.22", features = ["json"] }
serde_derive = "1.0.192"
